# SolarSystem

./: .gitmodules  CMakeLists.txt  CMakePresets.json
Sandbox/: CMakeLists.txt  GameLayer.h  Layer2D.h  SandBox.cpp
Sandbox/Assets/Shader/: FragmentShader.glsl
SolarEngine/: CMakeLists.txt  EntryPoint.h  Solar.h  pch.h
SolarEngine/Core/: Application.cpp  Application.h  Defines.h  Input.h  InputPlatform.h  OrthograhicCameraController.cpp  OrthograhicCameraController.h  TimeSteps.h  Window.h
SolarEngine/Core/DefaultShader/: Fragment.glsl
SolarEngine/Core/Event/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
SolarEngine/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
SolarEngine/Core/Logger/: Logger.cpp  Logger.h
SolarEngine/Core/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
SolarEngine/Core/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
SolarEngine/Core/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
SolarEngine/Core/Renderer/Camera/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  (+1 more)
SolarEngine/glad/glad/: glad.cpp  glad.h
Vendors/include/glad/: gl.h
